# image-gen-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
imagegen_mcp/: __init__.py  catalog.py  datadir.py  downloader.py  knowledge.py  router.py  server.py
imagegen_mcp/backends/: cloud.py  local.py
imagegen_mcp/seeds/: assets.json  lessons.jsonl
